abort session switch if we failed to close all things

BUG: 466553